[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netview"
version = "0.1.0"
authors = [{name="Eike Steinig", email="eike.steinig@unimelb.edu.au"}]
description = "Netview: mutual nearest neighbor graphs for genome-wide, fine-scale population structure determination and visualization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer==0.12.3",
]

[tool.setuptools.packages.find]
where = ["."]  
include = ["netview*"] 
namespaces = false

[project.scripts]
netview-utils = "netview.terminal:app"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.github
  | \.secrets
  | _build
  | buck-out
  | build
  | dist
  | app
  | docker
  | scripts
)/
'''

